Allow for unevenly distributed row heights / column widths and respect the preferred size of the child items; this should better accomodate icons with varying text lengths and prevent icons from growing beyong their preferred size. Section count estimation is still overly pessimistic, however.

BUG: 252344
FIXED-IN: 4.6

svn path=/trunk/KDE/kdebase/workspace/; revision=1193575